--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,9 @@
 <html>
-<body style="font-size:larger">
-If you see this text, the document has loaded properly.
+<body style="font-size:24pt;background-color:green">
+    <h1>
+If you see this text, the document has loaded properly and the background is green.
+</h1>
+<h2 id="location" style="width:100%">
+<h2>
 </body>
 </html>
