Set the document.location from the web-page itself.

--- a/www/index.html
+++ b/www/index.html
@@ -5,5 +5,8 @@ If you see this text, the document has loaded properly and the background is gre
 </h1>
 <h2 id="location" style="width:100%">
 <h2>
+<script>
+    document.getElementById('location').innerHTML = document.location;
+</script>
 </body>
 </html>
