--- a/www/index.html
+++ b/www/index.html
@@ -8,5 +8,7 @@ If you see this text, the document has loaded properly and the background is gre
 <script>
     document.getElementById('location').innerHTML = document.location;
 </script>
+<hr />
+<a href="http://apple.com">APPLE INC</a>
 </body>
 </html>
