--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,8 @@
 <html>
-<body style="font-size:24pt;background-color:green">
+<head>
+  <link rel="stylesheet" type="text/css" href="index.css">
+</head>
+<body>
     <h1>
 If you see this text, the document has loaded properly and the background is green.
 </h1>
